einstellung_derive/src/trybuild_tests/custom_merge_wrong_signature.stderr
error[E0308]: mismatched types
 --> src/trybuild_tests/custom_merge_wrong_signature.rs
  |
  | #[derive(Config)]
  |          ^^^^^^ expected fn pointer, found fn item
  |
  = note: expected fn pointer `fn(std::option::Option<std::string::String>, std::option::Option<std::string::String>) -> std::option::Option<std::string::String>`
                found fn item `fn(std::string::String, std::string::String) -> std::string::String {merge_hosts}`
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: arguments to this function are incorrect
  --> src/trybuild_tests/custom_merge_wrong_signature.rs
   |
   | #[derive(Config)]
   |          ^^^^^^
   |
note: expected `String`, found `Option<String>`
  --> src/trybuild_tests/custom_merge_wrong_signature.rs
   |
   |       #[config(merge(function = "merge_hosts"))]
   |  _______________________________^
   | |     host: String,
   | |________^
   = note: expected struct `std::string::String`
                found enum `std::option::Option<std::string::String>`
note: expected `String`, found `Option<String>`
  --> src/trybuild_tests/custom_merge_wrong_signature.rs
   |
   |       #[config(merge(function = "merge_hosts"))]
   |  _______________________________^
   | |     host: String,
   | |________^
   = note: expected struct `std::string::String`
                found enum `std::option::Option<std::string::String>`
note: function defined here
  --> src/trybuild_tests/custom_merge_wrong_signature.rs
   |
   | pub fn merge_hosts(_: String, b: String) -> String {
   |        ^^^^^^^^^^^ ---------  ---------
   = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using `Option::expect` to unwrap the `std::option::Option<std::string::String>` value, panicking if the value is an `Option::None`
   |
10 |     host.expect("REASON"): String,
   |         +++++++++++++++++
help: consider using `Option::expect` to unwrap the `std::option::Option<std::string::String>` value, panicking if the value is an `Option::None`
   |
10 |     host.expect("REASON"): String,
   |         +++++++++++++++++

error[E0308]: mismatched types
 --> src/trybuild_tests/custom_merge_wrong_signature.rs
  |
  | #[derive(Config)]
  |          ^^^^^^ expected `Option<String>`, found `String`
  |
  = note: expected enum `std::option::Option<std::string::String>`
           found struct `std::string::String`
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
